@@ -19,6 +19,7 @@ ClojureGeneralPreferencePage_auto_reload_on_startup_save=Automatic namespaces lo
 ClojureGeneralPreferencePage_launch_repls_in_debug_mode=Launch REPLs in Debug mode
 ClojureGeneralPreferencePage_use_leiningen_launcher=Launch Leiningen projects with Leiningen (uncheck to launch them via default java launcher)
 ClojureGeneralPreferencePage_use_cider_nrepl=Launch REPLs with cider-nrepl
+ClojureGeneralPreferencePage_use_clojure_1_6_print_object_hack=Keep print behavior of clojure 1.6 for printing objects when starting projects
 SyntaxColoringPreferencePage_link=Default colors and font can be configured on the <a href=\"org.eclipse.ui.preferencePages.GeneralTextEditor\">Text Editors</a> and on the <a href=\"org.eclipse.ui.preferencePages.ColorsAndFonts\">Colors and Fonts</a> preference page.
 SyntaxColoringPreferencePage_coloring_element=&Element:
 SyntaxColoringPreferencePage_enable=Enab&le
